# cpp_game_try

./: .gitignore  CMakeLists.txt  README.md  compiletout.sh
configFiles/: tiles.json  window.json
src/: CMakeLists.txt  Main.cpp
src/ecs/: CMakeLists.txt  Registry.cpp  Registry.hpp
src/ecs/ComponentsArray/: SparseArray.hpp
src/ecs/ComponentsArray/Components/: Components.hpp
src/ecs/ComponentsArray/Systems/: System.cpp  System.hpp
src/game/: Game.cpp  Game.hpp
src/graphic/: Graphic.cpp  Graphic.hpp
